fix mmm.cpp where in the blocked example, I was readding the sum instead of storing

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<script type="text/javascript" src="d3.min.js"></script>
 	<script type="text/javascript" src="graph.js"></script>
-	<script async type="text/javascript" src="mmm3.js"></script>
+	<script async type="text/javascript" src="mmm.js"></script>
 	<style>
 		.line {
 			fill: none;
